# CleveLand

./: .gitignore  CMakeLists.txt  README.md  makefile.bat  makefileforgarage.bat  prefs.save  ver  versionstring.txt
SERVER/: CMakeLists.txt  Need to fix.txt  makefile.bat  run.bat  signwords  time  vcpkg.json  world.file
SERVER/saves/world4/: player.save  world.save
SERVER/src/: ackies.h  acks.cpp  acks.h  inttup.cpp  main.cpp  signwords.cpp  signwords.h  timeupdate.h  uuid.cpp  uuid.h  voxelworld.cpp  voxelworld.h
SERVER/world/: world.save
VOICESERVER/: CMakeLists.txt  makefile.bat  makefileforothercomputer.bat  run.bat  vcpkg.json
VOICESERVER/src/: main.cpp  ringbuffer.h
multiplayer/: mobs.save  world.save
saves/world1/: player.save  world.save
saves/world2/: player.save  world.save
saves/world3/: player.save  world.save
saves/world4/: player.save  world.save
saves/world5/: player.save  world.save
src/: camera.cpp  camera.h  config.h  game.cpp  game.h  main.cpp  mobtype.cpp  mobtype.h  network.cpp  network.h  perlin.cpp  ringbuffer.cpp  ringbuffer.h  shader.cpp  shader.h  soundfxsystem.cpp  soundfxsystem.h  timetarget.h
src/chat/: chat.h  chatstuff.cpp  chatstuff.h
src/game/: blockchunk.h  geometrystore.cpp  geometrystore.h  nuggo.h  signwords.cpp  signwords.h  voxelworld.cpp  voxelworld.h  worldsavetests.cpp  worldsavetests.h
src/game/specialblocks/: chest.h  door.h  ladder.h  post.h  sign.h  stair.h  torch.h
src/gui/: glyphface.cpp  glyphface.h  guielement.cpp  guielement.h  hud.cpp  hud.h
src/util/: ackies.h  acklist.cpp  acklist.h  blockinfo.h  cameraposition.cpp  cameraposition.h  chunkcoord.h  collisioncage.cpp  collisioncage.h  customblock.h  fade.cpp  fade.h  guitextureface.cpp  guitextureface.h  inttup.cpp  inttup.h  lightinfo.cpp  lightinfo.h  meshcomponent.cpp  meshcomponent.h  particle.h  perlin.h  playergeo.h  random.cpp  random.h  raycast.cpp  raycast.h  settings.cpp  settings.h  textloader.cpp  textloader.h  textureface.cpp  textureface.h  uniqueid.cpp  uniqueid.h  username.cpp  username.h  vertexutils.cpp  vertexutils.h
updatescript/: UPDATE.bat  updatescript.py
